@@ -16,17 +16,21 @@ udhcpd /etc/udhcpd.eth1.conf
 
 The udhcp server employs a number of simple config files:
 
-udhcpd.leased
+udhcpd.leases
 ------------
 
 The udhcpd.leases behavior is designed for an embedded system. The
 file is written either every auto_time seconds, or when a SIGUSR1
-is received. When the file is written, a script can be optionally
-called to commit the file to flash. Lease times are stored in the
-file by time remaining in lease (for systems without clock that works
-when there is no power), or by the absolute time that it expires in
-seconds from epoch. In the remainig format, expired leases are stored
-as zero. The file is of the format:
+is received (the auto_time timer restarts if a SIGUSR1 is received). 
+If you send a SIGTERM to udhcpd directly after a SIGUSR1, udhcpd will
+finish writing the leases file and wait for the aftermentioned script
+to be executed and finish before quiting, so you do not need to sleep
+between sending signals. When the file is written, a script can be
+optionally called to commit the file to flash. Lease times are stored
+in the file by time remaining in lease (for systems without clock
+that works when there is no power), or by the absolute time that it
+expires in seconds from epoch. In the remainig format, expired leases
+are stored as zero. The file is of the format:
 
 16 byte MAC
 4 byte ip address
@@ -147,7 +151,7 @@ udhcpc also responds to SIGUSR1 and SIGUSR2. SIGUSR1 will force a renew state,
 and SIGUSR2 will force a release of the current lease, and cause udhcpc to
 go into an inactive state (until it is killed, or receives a SIGUSR1). You do
 not need to sleep between sending signals, as signals received are processed
-in a logical order during the main loop (release, then renew, then term).
+sequencially in the order they are received.
 
 
 
